# Soul-Editor

./: .gitignore  CMakeLists.txt  pyproject.toml
Source/: Editor.cpp
Tools/Conan/: conanfile.txt
Tools/Python/: Setup.py  Update.py
