[tool.poetry]
name = "Soul-Editor"
version = "0.0.1"
description = "Soul Editor is a interactive GUI for Soul Engine."

license = "GPLv3"

authors = [
    "Synodic Software"
]

readme = 'README.md'

repository = "https://github.com/Synodic-Software/Soul-Editor"
homepage = "https://github.com/Synodic-Software/Soul-Editor"

[tool.poetry.dependencies]
python = "3.7.*"
conan = "1.18.*"
