[tool.poetry]
name = "Soul-Editor"
version = "0.0.1"
description = "Soul Editor is a interactive GUI for Soul Engine."

license = "GPLv3"

authors = [
    "Synodic Software"
]

readme = 'README.md'

repository = "https://github.com/Synodic-Software/Soul-Editor"
homepage = "https://github.com/Synodic-Software/Soul-Editor"

packages = [
    { include = "Scripts.py", from = "Tools/Python"}
]


[tool.poetry.dependencies]
python  = "^3.8"


[tool.poetry.dev-dependencies]
colorama = "^0.4"
conan   = "^1.18.*"


[tool.poetry.scripts]
setup   = "Scripts:Setup"
update  = "Scripts:Update"


[build-system]
requires        = ["poetry>=0.12"]
build-backend   = "poetry.masonry.api"
